# german_multilanguage

./: app.py  dockerfile  image_search.py  langchain_utils.py  langchain_utils_openai.py  main.py  pyproject.toml  requirements.txt  setup.sh  text_to_audio.py
