[project]
name = "005-streamlit-get-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "debugpy>=1.8.14",
    "duckduckgo-search>=8.0.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "streamlit>=1.44.1",
    "webdriver-manager>=4.0.2",
]
