[project]
name = "005-streamlit-get-audio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "debugpy>=1.8.14",
    "duckduckgo-search>=8.0.1",
    "langchain[community,deepseek,openai]>=0.3.24",
    "langchain-community>=0.3.22",
    "openai>=1.76.0",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "selenium>=4.31.0",
    "streamlit>=1.44.1",
    "webdriver-manager>=4.0.2",
    "faiss-cpu>=1.10.0",
    "rich>=14.0.0",
    "gtts>=2.5.4",
    "pydub>=0.25.1",
    "watchdog>=6.0.0",
]
